# CSVtoReport

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  exceptions.py  logger.py  main.py  pyproject.toml
models/: video_metrics.py
reports/: base.py  clickbait.py  registry.py
services/: csv_reader.py  parser.py
tests/: test_clickbait.py  test_csv_reader.py  test_main.py  test_parser.py  test_register_report.py
