[project]
name = "csvtoreport"
version = "0.1.0"
description = ""
authors = [
    {name = "duxatici",email = "istouched@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pre-commit (>=4.6.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
